added connect wallet button

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -60,6 +60,11 @@
     display: flex;
 }
 
+.authentication {
+    justify-content: center;
+    align-items: center;
+}
+
 .wallet-button {
     color: white;
     font-family: 'Roboto', sans-serif;
@@ -71,5 +76,14 @@
 
     border-radius: 15px;
 
+    cursor: pointer;
+}
+
+.user-avatar {
+    border: 2px solid white;
+    border-radius: 50px;
+
+    width: 50px;
+    height: 50px;
     cursor: pointer;
 }
