added posted/done jobs page

--- a/src/pages/jobs-list/jobs-list.css
+++ b/src/pages/jobs-list/jobs-list.css
@@ -39,7 +39,8 @@
 }
 
 .job-card {
-    margin: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     border: 1px solid lightgrey;
 
     padding: 20px;
@@ -47,7 +48,7 @@
 
     height: 10rem;
     width: 53vw;
-    height: 13rem;
+    height: 15rem;
     padding-bottom: 0px;
 }
 
