--- a/src/pages/posted-jobs/posted-jobs.css
+++ b/src/pages/posted-jobs/posted-jobs.css
@@ -78,31 +78,41 @@
 }
 
 .add-job-textarea {
-    border: 1px solid lightgrey;
-    padding: 10px;
-    border-radius: 12px;
+  border: 1px solid lightgrey;
+  padding: 15px;
+  border-radius: 12px;
 
-    height: 8rem;
-  
-    width: 45vw;
+  height: 8rem;
+
+  width: 45vw;
 }
 
 .submit-job-btn {
-    margin-top: 20px;
+  margin-top: 20px;
 
-    color: white;
-    font-family: 'Roboto', sans-serif;
-    font-size: 22px;
-    font-weight: 800;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  font-size: 22px;
+  font-weight: 800;
 
-    background-color: green;
-    padding: 10px;
+  background-color: green;
+  padding: 10px;
 
-    border-radius: 15px;
+  border-radius: 15px;
 
-    cursor: pointer;
-    width: 10rem;
+  cursor: pointer;
+  width: 10rem;
 
-    text-align: center;
-    margin-bottom: 20px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.add-job-group-flex {
+    display: flex;
+    justify-content: space-between;
+
+    width: 50% ;
+}
+.w-50 {
+    width: 20vw;
 }
