--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -89,7 +89,7 @@
     font-size: 22px;
     font-weight: 800;
 
-    background-color: green;
+    background-color: #F05941;
     padding: 10px;
 
     border-radius: 15px;
