--- a/src/pages/home-page/home-page.css
+++ b/src/pages/home-page/home-page.css
@@ -16,6 +16,10 @@
     padding: 0 15px;
 }
 
+.bane {
+    margin-bottom: 3%;
+}
+
 .content {
     margin-top: 3%;
     flex-basis: 50%;
@@ -28,7 +32,33 @@
 }
 
 .content > * {
-    max-width: 50%; /* Adjust the value as needed */
+    max-width: 50%; 
     width: 100%;
-    box-sizing: border-box; /* This ensures that padding and border are included in the width */
+    box-sizing: border-box; 
+}
+
+.cards {
+    margin-top: 3%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2%;
+
+}
+
+.cards > * {
+    margin-left: 1%;
+    margin-right: 1%; 
+}
+
+
+
+.tags {
+    display: flex;
+  
+}
+
+.tags > * {
+    margin-left: 2%;
+    
 }
