--- a/src/pages/job-view/job-view.css
+++ b/src/pages/job-view/job-view.css
@@ -67,3 +67,34 @@
     margin: 10px;
     border-radius: 10px;
 }
+
+.eas-ic {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.eas-ico {
+    margin: auto;
+    width: 50px;
+    height: 50px;
+
+    margin-right: 30px;
+
+    cursor: pointer;
+}
+
+.assignee-wrap {
+    padding: 30px;
+    padding-top: 10px;
+    border: 1px solid lightgrey;
+
+    border-radius: 9px;
+    margin-top: 20px;
+}
+
+.freelancer {
+    font-weight: 500;
+    font-family: 'Roboto', sans-serif;
+    font-size: 19px;
+}
