--- a/src/pages/job-view/job-view.css
+++ b/src/pages/job-view/job-view.css
@@ -84,6 +84,14 @@
     cursor: pointer;
 }
 
+.eas-ico-down {
+    margin: auto;
+    width: 50px;
+    height: 50px;
+
+    cursor: pointer;
+}
+
 .assignee-wrap {
     padding: 30px;
     padding-top: 10px;
@@ -91,10 +99,13 @@
 
     border-radius: 9px;
     margin-top: 20px;
+    text-overflow: wrap;
 }
 
 .freelancer {
     font-weight: 500;
     font-family: 'Roboto', sans-serif;
-    font-size: 19px;
+    font-size: 17px;
+
+    text-wrap: pretty;
 }
