icon thorin added

--- a/src/pages/home-page/home-page.css
+++ b/src/pages/home-page/home-page.css
@@ -66,3 +66,12 @@
 .discover {
     margin-bottom: 2%;
 }
+
+.titlecard {
+    display:flex;
+    align-items: center;
+}
+
+.titlecard > *{
+    margin-right: 3%;
+}
